# src/main/java/com/volosinzena/barolab/controller/dto/SignUpRequestDto.java
@@ -10,5 +10,6 @@ import lombok.NoArgsConstructor;
 public class SignUpRequestDto {
     private String login;
     private String email;
+    private String username;
     private String password;
 }
