# src/main/java/com/volosinzena/barolab/repository/entity/UserEntity.java
@@ -23,6 +23,8 @@ public class UserEntity {
     @Column
     private String email;
     @Column
+    private String username;
+    @Column
     private String password;
     @Column
     @Enumerated(EnumType.STRING)
